# aoc_24

./: .gitignore  README.md  pyproject.toml
d_01/: historian.py  test.py
d_02/: README.md  power_plant_historian.py  test.py
d_03/: test.py  tobaggan_rental_shop.py
d_04/: test.py  the_puzzler.py
d_05/: list_sorter.py  test.py
d_06/: guard_maze.py  test.py
d_07/: operators.py
d_08/: antennas.py
d_09/: file_compression.py
